--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'alibaba-cloud-parent'
 include 'alibaba-cloud-oauth-api'
 include 'alibaba-cloud-oauth-impl'
 include 'alibaba-cloud-gateway'
+include 'alibaba-cloud-base'
 
