--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@
 /alibaba-cloud-gateway/out/production/classes/
 /alibaba-cloud-oauth-impl/out/
 /alibaba-cloud-oauth-impl/out/production/classes/
+*.bin
+.idea
+.idea/*
+.idea/**
+.gradle
+.gitignore
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+/.idea
+*.pem
+*.iml
+*.dex
+*.MF
+*.class
+bin/
+gen/
+/*/build/
+/*/out/
+proguard/
+*.log
+*.epoch
+*.lck
+/out/production/
+*/out/production/
