--- a/alibaba-cloud-oauth-impl/build.gradle
+++ b/alibaba-cloud-oauth-impl/build.gradle
@@ -4,6 +4,6 @@ jar {
 }
 
 dependencies {
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-oauth2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
     implementation project(':alibaba-cloud-oauth-api')
 }
