--- a/alibaba-cloud-oauth-impl/src/main/resources/bootstrap.yml
+++ b/alibaba-cloud-oauth-impl/src/main/resources/bootstrap.yml
@@ -6,10 +6,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: ${discovery_addr:182.61.42.24:8848}
+        server-addr: ${discovery_addr:127.0.0.1:8848}
         namespace: ${discovery_space:alibaba-cloud-dev}
       config:
-        server-addr: ${config_addr:182.61.42.24:8848}
+        server-addr: ${config_addr:127.0.0.1:8848}
         namespace: ${config_space:alibaba-cloud-dev}
         group: DEFAULT_GROUP
         file-extension: yml
@@ -21,3 +21,11 @@ spring:
       transport:
         dashboard: ${sentinel_addr:127.0.0.1:18080}
       eager: true
+  sleuth:
+    sampler:
+      probability: 1.0
+    redis:
+      enabled: false
+  zipkin:
+    base-url: ${zipkin_addr:http://127.0.0.1:9411}
+    discovery-client-enabled: false
